# loggit

./: .gitignore  Cargo.toml  README.md  build.rs  uniffi.toml
scripts/: build_bindings.sh  build_ios.sh  release.sh
src/: lib.rs  log.rs  logger.rs  loggit.udl
src/analytics/: analytics.rs
src/network_antenna/: client.rs  error.rs  mod.rs  network_antenna.rs  network_request.rs  transfer_client.rs
src/network_antenna/http_client/: http_client.rs  mod.rs  network_request.rs
